# helenos-iced-apps

./: Cargo.toml  README.md  notes.md
.cargo/: config.toml
fonts/: LICENSE
src/: lib.rs  main.rs  maina.rs  mainb.rs  tour.rs  viewer.rs
src/apps/imageviewer/: main.rs
src/apps/life/: main.rs  preset.rs
src/life/: mod.rs
src/platform/: helenos.rs  winit.rs
