[package]
edition = "2024"
name = "imageviewer-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
iced_renderer = {git = "https://github.com/mvolfik/iced.git", branch="helenos", features = ["image", "tiny-skia"]}
iced_runtime = {git = "https://github.com/mvolfik/iced.git", branch="helenos"}
iced_tiny_skia = {git = "https://github.com/mvolfik/iced.git", branch="helenos", features = ["image"]}
iced_widget = {git = "https://github.com/mvolfik/iced.git", branch="helenos", features = ["image", "canvas"]}
image = "0.24.9"
itertools = "0.14.0"
raw-window-handle = "*"
softbuffer = "*"

[target.'cfg(target_os = "linux")'.dependencies]
winit = "0.30.9"

[target.'cfg(target_os = "helenos")'.dependencies]
helenos-ui = {git = "https://github.com/mvolfik/helenos-ui-rs.git"}

[patch.crates-io]
softbuffer = {git = "https://github.com/mvolfik/softbuffer.git", branch = "helenos"}
swash = {git = "https://github.com/mvolfik/swash.git", branch = "helenos"}
raw-window-handle = {git = "https://github.com/mvolfik/raw-window-handle.git", branch="helenos"}
libc = {git = "https://github.com/mvolfik/rust-libc.git", branch = "helenos-v0.2"}
